--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -68,7 +68,8 @@ MACRO_DEF_MISSING=Found no definition for macro "{0}" while expanding "{1}"
 PARSING_TOOK=Parsing took {0}
 NFA_TOOK=NFA construction took {0}
 LOOKAHEAD_NEEDS_ACTION="|" action cannot be used with lookahead expressions
-EMPTY_MATCH = Lookahead expression must have match with at least length 1.
+EMPTY_MATCH = Expression matches the empty string, which may lead to non-termination.
+EMPTY_MATCH_LOOK = Lookahead expression must have match with length of at least 1.
 CTOR_ARG = Expected an identifier for constructor argument name.
 CTOR_DEBUG = Emitting default constructor without parameters and init code for debug/standalone.
 INT_AND_TYPE = Scanner can't have int and reference return type at the same time.
