--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -1,7 +1,7 @@
 UNTERMINATED_STR = Unterminated string at end of line.
 EOF_WO_ACTION    = <<EOF>> must be followed by an action.
 EOF_SINGLERULE   = <<EOF>> can only be used as a single rule.
-UNKNOWN_OPTION   = Unkown %-option
+UNKNOWN_OPTION   = Unknown %-option
 UNEXPECTED_CHAR  = Unexpected character
 UNEXPECTED_NL    = Unexpected character <newline>
 LEXSTATE_UNDECL  = Lexical state has not been declared.
