manual: section on interfacing with Jay parser generator
Contributed by Ronald Jeninga (@schedulix).

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -2699,6 +2699,8 @@ Runnable versions of the specifications above
 are located in the \texttt{examples/byaccj} directory of the JFlex 
 distribution.
 
+\input{jay}
+
 \section{Bugs and Deficiencies}\label{Bugs}
 
 \subsection{Deficiencies}
@@ -2772,6 +2774,11 @@ information.
   B.~Jamison, {\trit BYacc/J},\\
   \htmladdnormallink{\texttt{http://byaccj.sourceforge.net/}}
   {http://byaccj.sourceforge.net}
+
+\bibitem{Jay}
+  A.T.~Schreiner, {\trit Jay Parser Generator}, \\
+  \htmladdnormallink{\texttt{http://www.cs.rit.edu/~ats/projects/lp/doc/jay/package-summary.html}}
+  {http://www.cs.rit.edu/~ats/projects/lp/doc/jay/package-summary.html}
   
 \bibitem{MachineSpec}
  T.~Lindholm, F.~Yellin, {\trit The Java Virtual Machine Specification}, 1996,\\
