--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -24,8 +24,8 @@
 
 \newcommand{\trit}{\em}
 
-\newcommand{\ver}{1.6}
-\newcommand{\longver}{1.6.0}
+\newcommand{\ver}{1.6.1-SNAPSHOT}
+\newcommand{\longver}{1.6.1-SNAPSHOT}
 \newcommand{\nextver}{1.7}
 \newcommand{\latestunicodever}{7.0}
 
