New option —warn-unused
New `Options.unused_warning`, which, when set to false, hides warning
about unused macros.

For backward compatibility, warnings are enabled by default. On the
command line, warnings are disabled in quiet mode `-q` or with
`—warn-unused`.

The Maven plugin has a new option `unusedWarning`.

The ant task
Fix issue #122

The same option could be used for other unused warnings.

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -267,10 +267,13 @@ JFlex knows about the following options:
 
 \item \verb+--verbose+ or \texttt{-v}\\
   display generation progress messages (enabled by default)
-
+  
 \item \verb+--quiet+ or \texttt{-q}\\
   display error messages only (no chatter about what JFlex is
   currently doing)
+
+\item \verb+--warn_unused+\\
+  warn about unused macros (by default true in verbose mode and false in quiet mode)
 
 \item \verb+--time+\\
   display time statistics about the code generation process
