Add the --no-warn-unused command line option to the manual
(See also issue #122)

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -272,8 +272,11 @@ JFlex knows about the following options:
   display error messages only (no chatter about what JFlex is
   currently doing)
 
-\item \verb+--warn_unused+\\
+\item \verb+--warn-unused+\\
   warn about unused macros (by default true in verbose mode and false in quiet mode)
+
+\item \verb+--no-warn-unused+\\
+  do not warn about unused macros (by default true in verbose mode and false in quiet mode)
 
 \item \verb+--time+\\
   display time statistics about the code generation process
