add zero-reader example to manual

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -139,6 +139,7 @@ C:\bs jflex-\longver\bs\\
 \phantom{}~~~~~~~~+\dd simple-maven\bs~~~~~~~~~~~(example scanner built with maven)\\
 \phantom{}~~~~~~~~+\dd standalone-maven\bs~~~~~~~(a simple standalone scanner,\\ 
 \phantom{}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~built with maven)\\
+\phantom{}~~~~~~~~+\dd zero-reader\bs~~~~~~~~~~~~(example for Readers that return 0 characters)\\
 \phantom{}~~~~+\dd lib\bs~~~~~~~~~~~~~~~~~~~~~~~~(precompiled classes, skeleton files)\\ 
 \phantom{}~~~~+\dd src\bs\\
 \phantom{}~~~~~~~~+\dd main\bs\\ 
