@cites in markdown now work for tex
Inching ever closer to #187

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -29,6 +29,8 @@
 \newcommand{\nextver}{1.7}
 \newcommand{\latestunicodever}{7.0}
 
+\newcommand{\textcite}[1]{\cite{#1}}
+
 \begin{document}
 
 \latex{{\centerline{\hspace*{0mm}\includegraphics[width=0.6\textwidth]{jflex-black}}}}
