remove latex2html gen before converting to markdown
issue #187

--- a/tex/manual.tex
+++ b/tex/manual.tex
@@ -11,11 +11,11 @@
             pdfkeywords={Java, scanner, lexer, scanner generator},
             plainpages=false]{hyperref}
 
-\usepackage{html}
+%\usepackage{html}
 
 
-\newcommand{\bl}{\latex{\symbol{123}}\html{\{}}
-\newcommand{\br}{\latex{\symbol{125}}\html{\}}}
+\newcommand{\bl}{\symbol{123}}
+\newcommand{\br}{\symbol{125}}
 \newcommand{\bs}{\textbackslash}
 \newcommand{\dd}{\char`-\char`-}
 
@@ -33,16 +33,7 @@
 
 \begin{document}
 
-\latex{{\centerline{\hspace*{0mm}\includegraphics[width=0.6\textwidth]{jflex-black}}}}
-
-\html{
-\begin{rawhtml}
-<CENTER>
-<A NAME="TOP"></a>
-<A HREF="http://www.jflex.de"><IMG SRC="jflex-black.png" BORDER=0 HEIGHT=360 WIDTH=442></a>
-</CENTER>
-\end{rawhtml}
-}
+\centerline{\hspace*{0mm}\includegraphics[width=0.6\textwidth]{jflex-black}}
 
 \begin{center}
 \sffamily
