complete the split into multiple .md files; add html cites
still needs manual pass through the markdown files to fix up
the automatic conversion

(issue #187)

--- a/tex/ymanual.tex
+++ b/tex/ymanual.tex
@@ -24,6 +24,7 @@
 
 
 \newcommand{\textcite}[1]{\cite{#1}}
+\newcommand{\autocite}[1]{\cite{#1}}
 
 \renewcommand{\textquotesingle}{'}
 
@@ -63,7 +64,11 @@ Version 1.7.0-SNAPSHOT, {\today}
 \input{intro}
 \input{installing}
 \input{example}
-\input{xmanual}
+\input{lex-specs}
+\input{encodings}
+\input{performance}
+\input{porting-and-parsers}
+\input{end}
 
 \newpage  
 
