file reorg, put markdown files in own directory
closes issue #187

--- a/tex/xmanual.tex
+++ b/tex/xmanual.tex
@@ -40,7 +40,7 @@
 
 \begin{document}
 
-\centerline{\includegraphics[width=0.6\textwidth]{jflex-black}}
+\centerline{\includegraphics[width=0.6\textwidth]{fig/jflex-black}}
 
 \begin{center}
 \sffamily
