add link to Régis' home page

--- a/tex/xmanual.tex
+++ b/tex/xmanual.tex
@@ -47,7 +47,7 @@
 {\Large The Fast Lexical Analyser Generator}\\
 \smallskip\smallskip
 Copyright \copyright\ 1998--2015 by \href{http://www.doclsf.de}{Gerwin Klein},
-Steve Rowe, and R\'egis D\'ecamps.
+Steve Rowe, and \href{http://regis.decamps.info/}{R\'egis D\'ecamps}.
 
 \vspace*{15ex}
 {\Huge \sffamily \bfseries JFlex User's Manual}\\
