add command line option for choosing the input encoding

--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -77,3 +77,5 @@ DOT_BAR_NEWLINE_DOES_NOT_MATCH_ALL_CHARS=".|\\n" does not match all characters, 
 PROPS_ARG_REQUIRES_UNICODE_VERSION=The --uniprops option requires a Unicode version argument - supported versions: {0}
 IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than start)
 CODEPOINT_OUT_OF_RANGE = Hexadecimal code point is greater than the maximum allowed code point
+NO_ENCODING = "--encoding needs an encoding name as parameter"
+CHARSET_NOT_SUPPORTED = "Encoding {0} not supported on this JVM."
